feat: add GitHub Actions workflow and improve project configuration
- Add GitHub Actions workflow for CI/CD with Node.js testing and GitHub Pages deployment
- Configure ESLint with flat config, import validation rules, and dist folder ignore
- Update index.html to use module-based script loading instead of individual script tags
- Add main.js entry point for module imports and refactor app.js imports
- Configure Vite build with proper output directory and optimization settings
- Add gh-pages deployment script and update package.json scripts
- Add comprehensive .gitignore file for Node.js and build artifacts
- Update role.js with update method for role management
- Improve UI components with better toast notifications and icon initialization
- Add logger exports and module-based imports throughout the application

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Создание скрипта подкаста</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- Подключение Feather Icons -->
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
 <body>
     <header class="global-header">
@@ -89,21 +87,6 @@
 
     </div>
 
-    <script src="js/logger.js"></script>
-    <script src="js/models/base.js"></script>
-    <script src="js/models/role.js"></script>
-    <script src="js/models/replica.js"></script>
-    <script src="js/services/data-manager.js"></script>
-    <script src="js/services/file-handler.js"></script>
-    <script src="js/ui/base-element.js"></script>
-    <script src="js/ui/speaker-replica-element.js"></script>
-    <script src="js/ui/sound-effect-element.js"></script>
-    <script src="js/ui/components.js"></script>
-    <script src="js/app.js"></script>
-    
-    <!-- Инициализация Feather Icons -->
-    <script>
-        feather.replace();
-    </script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
