feat: add custom filename support for script download with modal dialog
- Replace save functionality with download functionality using custom filename dialog
- Add modal dialog for filename input with validation and proper error handling
- Update UI to show download icon and "Скачать скрипт" text
- Improve file handler to support custom filenames with .json extension validation
- Enhance error logging in storage manager with proper error message formatting
- Add filename validation to remove invalid characters for file names

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header-controls">
                 <div class="file-controls">
                     <button id="saveScriptBtn" class="btn btn-primary">
-                        <i data-feather="save"></i> Сохранить скрипт
+                        <i data-feather="download"></i> Скачать скрипт
                     </button>
                     <input type="file" id="loadScriptInput" accept=".json" style="display: none;">
                     <button id="loadScriptBtn" class="btn btn-primary">
