--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Создание скрипта подкаста</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
     <header class="global-header">
@@ -62,7 +62,6 @@
                             <i data-feather="shuffle"></i>
                         </button>
                     </div>
-                </div>
                 <div id="rolesList" class="roles-list"></div>
             </div>
         </aside>
@@ -87,6 +86,6 @@
 
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
