--- a/viewer.html
+++ b/viewer.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Просмотр скрипта подкаста</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/viewer.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/viewer.css">
 </head>
 <body>
     <div id="viewer-script-container" class="viewer-script-container"></div>
     
-    <script type="module" src="js/viewer/main.js"></script>
+    <script type="module" src="src/js/viewer/main.js"></script>
 </body>
 </html>
