--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             </div>
             <div class="header-controls">
                 <div class="file-controls">
-                    <button id="saveScriptBtn" class="btn btn-primary">
-                        <i data-feather="download"></i> Скачать скрипт
-                    </button>
+                <button id="saveScriptBtn" class="btn btn-primary">
+                    <i data-feather="download"></i> Скачать файл
+                </button>
                     <input type="file" id="loadScriptInput" accept=".json" style="display: none;">
                     <button id="loadScriptBtn" class="btn btn-primary">
-                        <i data-feather="upload"></i> Загрузить скрипт
+                        <i data-feather="upload"></i> Открыть файл
                     </button>
                 </div>
                 <button id="themeToggleBtn" class="theme-toggle-btn" title="Переключить тему">
