feat: add header styles and refactor viewer UI components
- Add new header.css file with unified header styles for the podcast scripter application
- Update index.html to include header.css and improve header structure with proper stats container
- Refactor viewer UI components to use shared header styles and remove duplicate controls
- Move statistics display to header and update viewer to use existing DOM elements instead of creating new ones
- Add theme preference loading and improve viewer initialization with proper DOM element checks
- Update ESLint configuration to fix path for logger.js file
- Remove deprecated viewer controls and statistics grid from viewer.css
- Add proper page title updates based on script data in viewer mode

--- a/viewer.html
+++ b/viewer.html
@@ -5,9 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Просмотр скрипта подкаста</title>
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/header.css">
     <link rel="stylesheet" href="src/css/viewer.css">
 </head>
 <body>
+    <header class="global-header">
+        <h1>Просмотр скрипта подкаста</h1>
+        <div class="header-content">
+            <div class="stats-container" id="viewerStatsContainer">
+                <div class="stat-item">
+                    <span>Слова</span>
+                    <span id="totalWords">0</span>
+                </div>
+                <div class="stat-item">
+                    <span>Длительность</span>
+                    <span id="totalDuration">0:00</span>
+                </div>
+                <div class="stat-item">
+                    <span>Роли</span>
+                    <span id="roleCount">0</span>
+                </div>
+                <div class="stat-item">
+                    <span>Реплики</span>
+                    <span id="replicaCount">0</span>
+                </div>
+            </div>
+            <div class="header-controls">
+                <div class="file-controls">
+                    <button id="viewerBackBtn" class="btn btn-secondary">
+                        <i data-feather="arrow-left"></i> Редактировать
+                    </button>
+                    <button id="viewerLoadJsonBtn" class="btn btn-primary">
+                        <i data-feather="upload"></i> Открыть файл
+                    </button>
+                    <input type="file" id="viewerJsonFileInput" accept=".json" style="display: none;">
+                    <button id="viewerPrintBtn" class="btn btn-outline-secondary">
+                        <i data-feather="printer"></i> Печать
+                    </button>
+                </div>
+                <button id="viewerThemeToggleBtn" class="theme-toggle-btn" title="Переключить тему">
+                    <span class="theme-icon">🌙</span>
+                </button>
+            </div>
+        </div>
+    </header>
+
+    <div class="viewer-script-container" id="viewerScriptContainer">
+        <div class="viewer-replicas-container">
+            <div class="viewer-replicas-list" id="viewerReplicasList">
+                <!-- Реплики будут загружаться сюда -->
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="src/js/viewer/main.js"></script>
 </body>
 </html>
