--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Создание скрипта подкаста</title>
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/header.css">
 </head>
 <body>
     <header class="global-header">
         <h1>Создание скрипта подкаста</h1>
         <div class="header-content">
-            <div class="stats-container header-stats">
+            <div class="stats-container" id="editorStatsContainer">
                 <div class="stat-item">
-                    <span>Всего слов:</span>
+                    <span>Слова</span>
                     <span id="totalWords">0</span>
                 </div>
                 <div class="stat-item">
-                    <span>Общая длительность:</span>
+                    <span>Длительность</span>
                     <span id="totalDuration">0:00</span>
                 </div>
             </div>
             <div class="header-controls">
                 <div class="file-controls">
-                <button id="saveScriptBtn" class="btn btn-primary">
-                    <i data-feather="download"></i> Скачать файл
-                </button>
+                    <button id="saveScriptBtn" class="btn btn-primary">
+                        <i data-feather="download"></i> Скачать файл
+                    </button>
                     <input type="file" id="loadScriptInput" accept=".json" style="display: none;">
                     <button id="loadScriptBtn" class="btn btn-primary">
                         <i data-feather="upload"></i> Открыть файл
