feat: add header styles and refactor viewer UI components
- Add new header.css file with unified header styles for both editor and viewer
- Update index.html to include header styles and improve stats container
- Remove duplicate viewer controls CSS that was moved to header.css
- Add ScriptData import to UIComponents and use it in save functionality
- Refactor ViewerUIComponents to use existing DOM elements instead of creating new ones
- Remove unused copy functionality from viewer and simplify event listeners
- Update ViewerApp to use existing viewerScriptContainer element
- Add proper error handling and DOM readiness checks in viewer
- Update ESLint config to fix logger.js path

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Создание скрипта подкаста</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/header.css">
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
     <header class="global-header">
