--- a/viewer.html
+++ b/viewer.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/header.css">
     <link rel="stylesheet" href="src/css/viewer.css">
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
     <header class="global-header">
